// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<layout> demo: render [basic] correctly 1`] = `
"<div class=\\"layout-demo\\">
  <section class=\\"arco-layout\\" style=\\"height: 400px;\\">
    <header class=\\"arco-layout-header\\">Header</header>
    <main class=\\"arco-layout-content\\">Content</main>
    <footer class=\\"arco-layout-footer\\">Footer</footer>
  </section><br>
  <section class=\\"arco-layout\\" style=\\"height: 400px;\\">
    <header class=\\"arco-layout-header\\">Header</header>
    <section class=\\"arco-layout\\">
      <div class=\\"arco-layout-sider\\" style=\\"width: 200px;\\">
        <div class=\\"arco-layout-sider-children\\">Sider</div>
        <!--v-if-->
      </div>
      <main class=\\"arco-layout-content\\">Content</main>
    </section>
    <footer class=\\"arco-layout-footer\\">Footer</footer>
  </section><br>
  <section class=\\"arco-layout\\" style=\\"height: 400px;\\">
    <header class=\\"arco-layout-header\\">Header</header>
    <section class=\\"arco-layout\\">
      <main class=\\"arco-layout-content\\">Content</main>
      <div class=\\"arco-layout-sider arco-layout-sider-light\\" style=\\"width: 200px;\\">
        <div class=\\"arco-layout-sider-children\\">Sider</div>
        <!--v-if-->
      </div>
    </section>
    <footer class=\\"arco-layout-footer\\">Footer</footer>
  </section><br>
  <section class=\\"arco-layout\\" style=\\"height: 400px;\\">
    <header class=\\"arco-layout-header\\">Header</header>
    <section class=\\"arco-layout\\">
      <div class=\\"arco-layout-sider arco-layout-sider-light\\" style=\\"width: 64px;\\">
        <div class=\\"arco-layout-sider-children\\">Sider</div>
        <!--v-if-->
      </div>
      <div class=\\"arco-layout-sider arco-layout-sider-light\\" style=\\"width: 206px; margin-left: 1px;\\">
        <div class=\\"arco-layout-sider-children\\">Sider</div>
        <!--v-if-->
      </div>
      <main class=\\"arco-layout-content\\">Content</main>
    </section>
    <footer class=\\"arco-layout-footer\\">Footer</footer>
  </section>
</div>"
`;

exports[`<layout> demo: render [breakpoint] correctly 1`] = `
"<section class=\\"arco-layout layout-demo\\">
  <div class=\\"arco-layout-sider arco-layout-sider-has-trigger\\" style=\\"width: 220px;\\">
    <div class=\\"arco-layout-sider-children\\">
      <div class=\\"logo\\"></div>
      <div class=\\"arco-menu arco-menu-dark arco-menu-vertical\\">
        <div class=\\"arco-menu-inner\\">
          <div class=\\"arco-menu-item arco-menu-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-home\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 17 24 7l17 10v24H7V17Z\\"></path>
              <path d=\\"M20 28h8v13h-8V28Z\\"></path>
            </svg> Menu 1
            <!---->
          </div>
          <div class=\\"arco-menu-item arco-menu-selected\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
            </svg> Menu 2
            <!---->
          </div>
          <div class=\\"arco-menu-inline\\">
            <div class=\\"arco-menu-inline-header\\">
              <!--v-if--><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg>Navigation 1</span><span class=\\"arco-menu-icon-suffix is-open\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
            </div>
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div class=\\"arco-menu-inline-content\\">
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-inline\\">
                  <div class=\\"arco-menu-inline-header\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span>Navigation 2<span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span></div>
                  <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                        <!---->
                      </div>
                    </div>
                  </transition-stub>
                </div>
                <div class=\\"arco-menu-inline\\">
                  <div class=\\"arco-menu-inline-header\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span>Navigation 3<span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span></div>
                  <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 3</span>
                        <!---->
                      </div>
                    </div>
                  </transition-stub>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class=\\"arco-menu-inline\\">
            <div class=\\"arco-menu-inline-header\\">
              <!--v-if--><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg>Navigation 4</span><span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
            </div>
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 3</span>
                  <!---->
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"arco-layout-sider-trigger\\" style=\\"width: 220px;\\">
      <div><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path>
        </svg></div>
    </div>
  </div>
  <section class=\\"arco-layout\\">
    <header class=\\"arco-layout-header\\">
      <div class=\\"arco-menu arco-menu-light arco-menu-horizontal\\">
        <div class=\\"arco-menu-inner\\">
          <div class=\\"arco-menu-overflow-wrap\\">
            <div class=\\"arco-menu-pop arco-menu-pop-header arco-menu-overflow-sub-menu-mirror\\" aria-haspopup=\\"true\\">
              <!-- header -->
              <!--v-if--><span>...</span><!-- suffix --><span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
              <!--v-if-->
            </div>
            <!---->
            <div class=\\"arco-menu-item arco-menu-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-home\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M7 17 24 7l17 10v24H7V17Z\\"></path>
                <path d=\\"M20 28h8v13h-8V28Z\\"></path>
              </svg> Menu 1
              <!---->
            </div>
            <div class=\\"arco-menu-item arco-menu-selected\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
              </svg> Menu 2 <div class=\\"arco-menu-selected-label\\"></div>
            </div>
            <div class=\\"arco-menu-pop arco-menu-pop-header\\" aria-haspopup=\\"true\\">
              <!-- header -->
              <!--v-if--><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg>Navigation 1</span><!-- suffix --><span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
              <!--v-if-->
            </div>
            <!---->
            <div class=\\"arco-menu-pop arco-menu-pop-header\\" aria-haspopup=\\"true\\">
              <!-- header -->
              <!--v-if--><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg>Navigation 4</span><!-- suffix --><span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
              <!--v-if-->
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <!--v-if-->
      </div>
    </header>
    <section class=\\"arco-layout\\" style=\\"padding: 0px 24px;\\">
      <div role=\\"list\\" class=\\"arco-breadcrumb\\" style=\\"margin: 16px 0px;\\">
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">Home
          <!---->
        </div>
        <div aria-hidden=\\"true\\" class=\\"arco-breadcrumb-item-separator\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-oblique-line\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"M29.506 6.502 18.493 41.498\\"></path>
          </svg></div>
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">List
          <!---->
        </div>
        <div aria-hidden=\\"true\\" class=\\"arco-breadcrumb-item-separator\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-oblique-line\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"M29.506 6.502 18.493 41.498\\"></path>
          </svg></div>
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">App
          <!---->
        </div>
        <!---->
      </div>
      <main class=\\"arco-layout-content\\">Content</main>
      <footer class=\\"arco-layout-footer\\">Footer</footer>
    </section>
  </section>
</section>"
`;

exports[`<layout> demo: render [collapsed] correctly 1`] = `
"<section class=\\"arco-layout layout-demo\\">
  <div class=\\"arco-layout-sider arco-layout-sider-light\\" style=\\"width: 200px;\\">
    <div class=\\"arco-layout-sider-children\\">
      <div class=\\"logo\\"></div>
      <div class=\\"arco-menu arco-menu-light arco-menu-vertical\\" style=\\"width: 100%;\\">
        <div class=\\"arco-menu-inner\\">
          <div class=\\"arco-menu-item arco-menu-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-home\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 17 24 7l17 10v24H7V17Z\\"></path>
              <path d=\\"M20 28h8v13h-8V28Z\\"></path>
            </svg> Menu 1
            <!---->
          </div>
          <div class=\\"arco-menu-item\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
            </svg> Menu 2
            <!---->
          </div>
          <div class=\\"arco-menu-item arco-menu-selected\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
            </svg> Menu 3
            <!---->
          </div>
          <div class=\\"arco-menu-inline\\">
            <div class=\\"arco-menu-inline-header\\">
              <!--v-if--><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg>Navigation 1</span><span class=\\"arco-menu-icon-suffix is-open\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
            </div>
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div class=\\"arco-menu-inline-content\\">
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-inline\\">
                  <div class=\\"arco-menu-inline-header\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span>Navigation 2<span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span></div>
                  <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                        <!---->
                      </div>
                    </div>
                  </transition-stub>
                </div>
                <div class=\\"arco-menu-inline\\">
                  <div class=\\"arco-menu-inline-header\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span>Navigation 3<span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span></div>
                  <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 3</span>
                        <!---->
                      </div>
                    </div>
                  </transition-stub>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class=\\"arco-menu-inline\\">
            <div class=\\"arco-menu-inline-header\\">
              <!--v-if--><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg>Navigation 4</span><span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
            </div>
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 3</span>
                  <!---->
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
  <section class=\\"arco-layout\\">
    <header class=\\"arco-layout-header\\" style=\\"padding-left: 20px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-round arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
        <!--v-if--><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-caret-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path d=\\"M13.171 24.937a1.2 1.2 0 0 1 0-1.874L30.051 9.56c.785-.629 1.949-.07 1.949.937v27.006c0 1.006-1.164 1.566-1.95.937L13.171 24.937Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        </svg>
      </button></header>
    <section class=\\"arco-layout\\" style=\\"padding: 0px 24px;\\">
      <div role=\\"list\\" class=\\"arco-breadcrumb\\" style=\\"margin: 16px 0px;\\">
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">Home
          <!---->
        </div>
        <div aria-hidden=\\"true\\" class=\\"arco-breadcrumb-item-separator\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-oblique-line\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"M29.506 6.502 18.493 41.498\\"></path>
          </svg></div>
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">List
          <!---->
        </div>
        <div aria-hidden=\\"true\\" class=\\"arco-breadcrumb-item-separator\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-oblique-line\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"M29.506 6.502 18.493 41.498\\"></path>
          </svg></div>
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">App
          <!---->
        </div>
        <!---->
      </div>
      <main class=\\"arco-layout-content\\">Content</main>
      <footer class=\\"arco-layout-footer\\">Footer</footer>
    </section>
  </section>
</section>"
`;

exports[`<layout> demo: render [custom-icon] correctly 1`] = `
"<section class=\\"arco-layout layout-demo\\">
  <div class=\\"arco-layout-sider arco-layout-sider-light arco-layout-sider-has-trigger\\" style=\\"width: 200px;\\">
    <div class=\\"arco-layout-sider-children\\">
      <div class=\\"logo\\"></div>
      <div class=\\"arco-menu arco-menu-light arco-menu-vertical\\" style=\\"width: 100%;\\">
        <div class=\\"arco-menu-inner\\">
          <div class=\\"arco-menu-item arco-menu-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-home\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 17 24 7l17 10v24H7V17Z\\"></path>
              <path d=\\"M20 28h8v13h-8V28Z\\"></path>
            </svg> Menu 1
            <!---->
          </div>
          <div class=\\"arco-menu-item\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
            </svg> Menu 2
            <!---->
          </div>
          <div class=\\"arco-menu-item arco-menu-selected\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
            </svg> Menu 3
            <!---->
          </div>
          <div class=\\"arco-menu-inline\\">
            <div class=\\"arco-menu-inline-header\\">
              <!--v-if--><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
              </svg> Navigation 1 <span class=\\"arco-menu-icon-suffix is-open\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
            </div>
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div class=\\"arco-menu-inline-content\\">
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-inline\\">
                  <div class=\\"arco-menu-inline-header\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span>Navigation 2<span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span></div>
                  <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                        <!---->
                      </div>
                    </div>
                  </transition-stub>
                </div>
                <div class=\\"arco-menu-inline\\">
                  <div class=\\"arco-menu-inline-header\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span>Navigation 3<span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span></div>
                  <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                        <!---->
                      </div>
                      <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 3</span>
                        <!---->
                      </div>
                    </div>
                  </transition-stub>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class=\\"arco-menu-inline\\">
            <div class=\\"arco-menu-inline-header\\">
              <!--v-if--><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path>
              </svg> Navigation 4 <span class=\\"arco-menu-icon-suffix\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
            </div>
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div class=\\"arco-menu-inline-content\\" style=\\"display: none;\\">
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 1</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 2</span>
                  <!---->
                </div>
                <div class=\\"arco-menu-item\\"><span class=\\"arco-menu-indent-list\\"><span class=\\"arco-menu-indent\\" style=\\"\\"></span></span><span class=\\"arco-menu-item-inner\\">Menu 3</span>
                  <!---->
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"arco-layout-sider-trigger arco-layout-sider-trigger-light\\" style=\\"width: 200px;\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-caret-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <path d=\\"M13.171 24.937a1.2 1.2 0 0 1 0-1.874L30.051 9.56c.785-.629 1.949-.07 1.949.937v27.006c0 1.006-1.164 1.566-1.95.937L13.171 24.937Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
      </svg></div>
  </div>
  <section class=\\"arco-layout\\">
    <header class=\\"arco-layout-header\\" style=\\"padding-left: 20px;\\"> Header </header>
    <section class=\\"arco-layout\\" style=\\"padding: 0px 24px;\\">
      <div role=\\"list\\" class=\\"arco-breadcrumb\\" style=\\"margin: 16px 0px;\\">
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">Home
          <!---->
        </div>
        <div aria-hidden=\\"true\\" class=\\"arco-breadcrumb-item-separator\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-oblique-line\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"M29.506 6.502 18.493 41.498\\"></path>
          </svg></div>
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">List
          <!---->
        </div>
        <div aria-hidden=\\"true\\" class=\\"arco-breadcrumb-item-separator\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-oblique-line\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"M29.506 6.502 18.493 41.498\\"></path>
          </svg></div>
        <div role=\\"listitem\\" class=\\"arco-breadcrumb-item\\">App
          <!---->
        </div>
        <!---->
      </div>
      <main class=\\"arco-layout-content\\">Content</main>
      <footer class=\\"arco-layout-footer\\">Footer</footer>
    </section>
  </section>
</section>"
`;

exports[`<layout> demo: render [resize] correctly 1`] = `
"<div class=\\"layout-demo\\">
  <section class=\\"arco-layout\\">
    <header class=\\"arco-layout-header\\">Header</header>
    <section class=\\"arco-layout\\">
      <div class=\\"arco-resizebox arco-layout-sider arco-layout-sider-light\\" style=\\"width: 200px;\\">
        <div class=\\"arco-layout-sider-children\\"> Sider </div>
        <!--v-if-->
        <div class=\\"arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right\\">
          <!-- @slot 自定义内容 -->
          <div class=\\"arco-resizebox-trigger-icon-wrapper\\">
            <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-drag-dot-vertical arco-resizebox-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
              <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\"></path>
            </svg>
          </div>
        </div>
      </div>
      <main class=\\"arco-layout-content\\">Content</main>
    </section>
    <footer class=\\"arco-layout-footer\\">Footer</footer>
  </section>
</div>"
`;
